animation project start

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -53,19 +53,21 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_swan"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme">
+        android:theme="@style/NoTitleAppTheme">
         <activity
-            android:name=".base.WeChatMainActivity"
+            android:name=".base.IndexActivity"
             android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
 
         <activity
             android:name=".base.LauncherActivity"
+            android:screenOrientation="portrait"/>
+        <activity
+            android:name=".base.WeChatMainActivity"
             android:screenOrientation="portrait"/>
 
         <activity
