--- a/animation/src/main/AndroidManifest.xml
+++ b/animation/src/main/AndroidManifest.xml
@@ -4,7 +4,7 @@
 
     <application
         android:allowBackup="true"
-        android:icon="@mipmap/ic_swan"
+        android:icon="@mipmap/ic_deer"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_deer"
         android:supportsRtl="true"
@@ -20,7 +20,10 @@
         <activity android:name=".base.activity.AnimationMainActivity"
             android:screenOrientation="portrait"/>
 
-        <activity android:name=".simple.SimpleIndexActivity"
+        <activity android:name=".index.SimpleIndexActivity"
+            android:screenOrientation="portrait"/>
+
+        <activity android:name=".index.ComplexIndexActivity"
             android:screenOrientation="portrait"/>
     </application>
 
