--- a/config.gradle
+++ b/config.gradle
@@ -6,6 +6,7 @@ ext {
     supportLibraryVersion = '28.0.0'
     constraintLayoutVersion = '1.1.3'
     glideSdkVersion         = "4.8.0"
+    photoviewVersion         = "1.2.4"
 
     android = [
             compileSdkVersion       : 28,
