--- a/config.gradle
+++ b/config.gradle
@@ -5,8 +5,8 @@ ext {
     // Google Support
     supportLibraryVersion = '28.0.0'
     constraintLayoutVersion = '1.1.3'
-    glideSdkVersion         = "4.8.0"
-    photoviewVersion         = "1.2.4"
+    glideSdkVersion         = "3.7.0"
+    photoViewVersion         = "1.3.1"
 
     android = [
             compileSdkVersion       : 28,
