--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -48,6 +48,8 @@
     <!-- 弹出层 -->
     <uses-permission android:name="android.permission.INTERNAL_SYSTEM_WINDOW"
         tools:ignore="ProtectedPermissions" />
+    <!-- 录音 -->
+    <uses-permission android:name="android.permission.RECORD_AUDIO" />
 
 
     <application
@@ -136,7 +138,10 @@
             android:launchMode="singleTask"
             android:screenOrientation="portrait" />
 
-
+        <activity
+            android:name=".activity.hardware.act.IsTwoSdCardActivity"
+            android:launchMode="singleTask"
+            android:screenOrientation="portrait" />
 
         <!-- apk bus demo -->
         <activity
@@ -182,6 +187,23 @@
             android:name=".activity.base.act.HandlerMainActivity"
             android:launchMode="singleTask"
             android:screenOrientation="portrait" />
+
+
+
+        <!-- 序列   录音 序列 -->
+        <activity
+            android:name=".index.VoiceIndexActivity"
+            android:launchMode="singleTask"
+            android:screenOrientation="portrait"/>
+
+        <activity
+            android:name=".activity.voice.act.RecordActivity"
+            android:launchMode="singleTask"
+            android:screenOrientation="portrait"/>
+        <activity
+            android:name=".activity.voice.act.RecordActivity2"
+            android:launchMode="singleTask"
+            android:screenOrientation="portrait"/>
     </application>
 
 </manifest>
