--- a/config.gradle
+++ b/config.gradle
@@ -1,12 +1,17 @@
+def butterknifeVersion = "8.5.1"
+
 ext {
-    isStructureApplication = true;
+    isStructureApplication = false;
     isDoudouApplication = false;
+    isCarAssistantApplication = true;
 
     // Google Support
     supportLibraryVersion = '28.0.0'
     constraintLayoutVersion = '1.1.3'
     glideSdkVersion         = "3.7.0"
     photoViewVersion         = "1.3.1"
+    butterknifeVersion       = "8.5.1"
+    dagger2Version           = "2.10"
 
     android = [
             compileSdkVersion       : 28,
@@ -36,4 +41,14 @@ ext {
             "router"                      : "com.alibaba:arouter-api:1.4.1",
             "router-compiler"             : "com.alibaba:arouter-compiler:1.2.2",
     ]
+
+
+    supportAppcompatV7 = "com.android.support:appcompat-v7:${version["androidSupportSdkVersion"]}"
+    supportDesign = "com.android.support:design:${version["androidSupportSdkVersion"]}"
+    roughikeBottomBar = "com.roughike:bottom-bar:2.3.1"
+
+
+    butterknife = "com.jakewharton:butterknife:${butterknifeVersion}"
+    butterknifeCompiler = "com.jakewharton:butterknife-compiler:${butterknifeVersion}"
+
 }
