--- a/config.gradle
+++ b/config.gradle
@@ -3,7 +3,7 @@ def butterknifeVersion = "8.5.1"
 ext {
     isStructureApplication = false;
     isDoudouApplication = false;
-    isCarAssistantApplication = true;
+    isDouyaApplication = true;
 
     // Google Support
     supportLibraryVersion = '28.0.0'
