--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -210,6 +210,7 @@
             android:name=".ui.other.act.TableScheActivity"
             android:launchMode="singleTask"
             android:screenOrientation="portrait"/>
+        <!-- 抽屉效果 -->
     </application>
 
 </manifest>
