--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -148,7 +148,11 @@
             android:launchMode="singleTask"
             android:screenOrientation="portrait" />
 
-
+        <!-- Mvp 测试 -->
+        <activity
+            android:name=".ui.gallery.act.JGalleryMainActivity"
+            android:launchMode="singleTask"
+            android:screenOrientation="portrait" />
 
 
 
