--- a/dongnao/build.gradle
+++ b/dongnao/build.gradle
@@ -50,6 +50,6 @@ dependencies {
     implementation "com.android.support:appcompat-v7:$rootProject.ext.supportLibraryVersion"
     implementation "com.android.support:design:$rootProject.ext.supportLibraryVersion"
 
-
+    implementation 'org.aspectj:aspectjrt:1.9.4'
 
 }
