--- a/config.gradle
+++ b/config.gradle
@@ -3,7 +3,7 @@ def butterknifeVersion = "8.5.1"
 ext {
     isStructureApplication = false;
     isDoudouApplication = false;
-    isDouyaApplication = true;
+    isDongnaoApplication = true;
 
     // Google Support
     supportLibraryVersion = '28.0.0'
@@ -16,7 +16,7 @@ ext {
     android = [
             compileSdkVersion       : 28,
             buildToolsVersion       : "28.0.3",
-            minSdkVersion           : 21,
+            minSdkVersion           : 24,
             targetSdkVersion        : 28,
             versionCode             : 61,   //版本更新了几次，第一版应用是1，以后每更新一次加1
             versionName             : "3.5.7",
