--- a/imagepicker/build.gradle
+++ b/imagepicker/build.gradle
@@ -32,9 +32,11 @@ android {
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
 
-    implementation "com.android.support:appcompat-v7:$rootProject.ext.supportLibraryVersion"
-    implementation "com.android.support:design:$rootProject.ext.supportLibraryVersion"
-    implementation "com.github.bumptech.glide:glide:$rootProject.ext.glideSdkVersion"
+    implementation "com.android.support:appcompat-v7:$rootProject.ext.version.supportSdkVersion"
+    implementation "com.android.support:design:$rootProject.ext.version.supportSdkVersion"
+    implementation "com.github.bumptech.glide:glide:$rootProject.ext.version.glideSdkVersion"
 
-    implementation "com.github.chrisbanes:PhotoView:$rootProject.ext.photoViewVersion"
+    implementation "com.github.chrisbanes:PhotoView:1.3.1"
+
+
 }
